--- a/index.html
+++ b/index.html
@@ -13,16 +13,19 @@
 
 <body>
 
-  <div class="wrapper">
+  <div class="header">
+	<div class="logo"></div>
+	<ul>
+		<li>Home</li>
+		<li>About</li>
+		<li>Spotify</li>
+	</ul>
+</div>
+
+<div class="wrapper">
 	<div class="circle"></div>
 	<div class="circle2"></div>
-	<p>Alexey Brodovitch was a photographer, designer and teacher. However, he was most famous for his art direction, primarily for the magazine Harper's Bazaar. He spent his early life in and out of the military before spending time in Paris, which is where
-		he began his career in the graphic arts. His first major success came after winning a poster competition for a local theater, the 2nd place poster was created by Picasso.Alexey Brodovitch was a photographer, designer and teacher. However, he was most
-		famous for his art direction, primarily for the magazine Harper's Bazaar. He spent his early life in and out of the military before spending time in Paris, which is where he began his career in the graphic arts. His first major success came after winning
-		a poster competition for a local theater, the 2nd place poster was created by Picasso.Alexey Brodovitch was a photographer, designer and teacher. However, he was most famous for his art direction, primarily for the magazine Harper's Bazaar. He spent
-		his early life in and out of the military before spending time in Paris, which is where he began his career in the graphic arts. His first major success came after winning a poster competition for a local theater, the 2nd place poster was created by
-		Picasso.Alexey Brodovitch was a photographer, designer and teacher. However, he was most famous for his art direction, primarily for the magazine Harper's Bazaar. He spent his early life in and out of the military before spending time in Paris, which
-		is where he began his career in the graphic arts. His first major success came after winning a poster competition for a local theater</p>
+	<p>My name is James Williams. This is wher I would put a bunch of stuff that I'm into, mauybe what drives my passion for design and development. I'm not sure what I would put here yet but I'm just typing to I can have some body stuff to play with. My name is James Williams. This is wher I would put a bunch of stuff that I'm into, mauybe what drives my passion for design and development. I'm not sure what I would put here yet but I'm just typing to I can have some body stuff to play with.</p>
 </div>
   
   
