begin styles for homepage of site

--- a/index.html
+++ b/index.html
@@ -3,32 +3,30 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>A Pen by  James</title>
-  <link href="https://fonts.googleapis.com/css?family=Vidaloka" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
-
-  
-      <link rel="stylesheet" href="css/style.css">
-
-  
+  <title>James Williams Designs</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
+	<link rel="stylesheet" href="fonts/DubielItalic.ttf">
+	<link rel="stylesheet" href="fonts/DubielPlain.ttf">
+	<link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-
-  <div class="wrapper">
-	<div class="circle"></div>
-	<div class="circle2"></div>
-	<p>Alexey Brodovitch was a photographer, designer and teacher. However, he was most famous for his art direction, primarily for the magazine Harper's Bazaar. He spent his early life in and out of the military before spending time in Paris, which is where
-		he began his career in the graphic arts. His first major success came after winning a poster competition for a local theater, the 2nd place poster was created by Picasso.Alexey Brodovitch was a photographer, designer and teacher. However, he was most
-		famous for his art direction, primarily for the magazine Harper's Bazaar. He spent his early life in and out of the military before spending time in Paris, which is where he began his career in the graphic arts. His first major success came after winning
-		a poster competition for a local theater, the 2nd place poster was created by Picasso.Alexey Brodovitch was a photographer, designer and teacher. However, he was most famous for his art direction, primarily for the magazine Harper's Bazaar. He spent
-		his early life in and out of the military before spending time in Paris, which is where he began his career in the graphic arts. His first major success came after winning a poster competition for a local theater, the 2nd place poster was created by
-		Picasso.Alexey Brodovitch was a photographer, designer and teacher. However, he was most famous for his art direction, primarily for the magazine Harper's Bazaar. He spent his early life in and out of the military before spending time in Paris, which
-		is where he began his career in the graphic arts. His first major success came after winning a poster competition for a local theater</p>
-</div>
-  
-  
-
+	<div class="wrapper">
+		<div class="seperator-line"></div>
+		<img class="title-name" src="title-name.svg">
+		<div class="seperator-line"></div>
+		<section class="previous-employers">
+			<span>Lead UX - Genalpha Technologies</span>
+			<span>Senior UX Engineer - Acculynx</span>
+			<span>Web Designer/Front-End Engineer/Senior UX Engineer - Zywave</span>
+			<span>Web Designer - Moraine Valley Community College</span>
+			<span>UX Web Developer - The GUM Brand</span>
+			<span>Marketing and Design - Delware North Companies - Chicago Bears</span>
+			<span>Designer -  Ocean Vodka</span>
+			<span>Designer -  Battleshots</span>
+			<span>Designer - Fakeshore Drive</span>
+		</section>
+	</div>
 </body>
 
 </html>
