footer/nav work

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 </head>
 
 <body>
+	<div class="header">
+			<div>This site was designed by James Williams</div>
+	</div>
 	<div class="wrapper">
 		<div class="seperator-line"></div>
 		<img class="title-name" src="title-name.svg">
@@ -26,6 +29,11 @@
 			<span>Designer -  Battleshots</span>
 			<span>Designer - Fakeshore Drive</span>
 		</section>
+	</div>
+	<div class="footer">
+		<div>Home</div>
+		<div>About</div>
+		<div><a href="listening-to.html">Listening to</a></div>
 	</div>
 </body>
 
