--- a/index.html
+++ b/index.html
@@ -12,10 +12,16 @@
 
 <body>
 	<div class="header">
-			<div>This site was designed by James Williams</div>
+			<div>This site was designed and developed by James Williams. Find him here:</div>
+			<div class="link-list">
+				<a target="_blank" href="https://www.linkedin.com/in/james-williams-25639a36/">LinkedIn</a>
+				<a target="_blank" href="https://twitter.com/JaamesW">Twitter</a>
+				<a href="">Instagram</a>
+				<a target="_blank" href="https://github.com/JaamesW">Github</a>
+				<a href="">Spotify</a>
+			</div>
 	</div>
 	<div class="wrapper">
-		<div class="seperator-line"></div>
 		<img class="title-name" src="title-name.svg">
 		<div class="seperator-line"></div>
 		<section class="previous-employers">
@@ -33,7 +39,7 @@
 	<div class="footer">
 		<div>Home</div>
 		<div>About</div>
-		<div><a href="listening-to.html">Listening to</a></div>
+		<div>Listening to</div>
 	</div>
 </body>
 
