one of many design changes that will inevitably happen

--- a/about.html
+++ b/about.html
@@ -19,27 +19,25 @@
 				<div><a href="index.html">Home</a></div>
 				<div><a href="about.html">About</a></div>
 				<div><a href="images/james-williams.pdf">Resume</a></div>
+				<div><a href="spotify:user:dopedesigner">Spotify</a></div>
 			</div>
 		</div>
 		<div class="intro">
-			<div class="box">
-				<span class="glitch">James Williams</span>
+			<div class="tagline">Hi there, I'm <span class="name">James</span>. I design and develop delight and meaning into your user's experience. 
+				<div class="last-updated">LAST UPDATED FEB 2019</div>
 			</div>
-			<div class="tagline">Lead UX. Designer. Developer. Curious. <span class="oddball">Oddball.</span> <br>Humanizing Technology everyday. </div>
 		</div>
 	</div>
-	<div class="wrapper">		
-		<section class="previous-employers">
-			<span>Lead UX - Genalpha Technologies</span>
-			<span>Senior UX Engineer - Acculynx</span>
-			<span>Web Designer/Front-End Engineer/Senior UX Engineer - Zywave</span>
-			<span>Web Designer - Moraine Valley Community College</span>
-			<span>UX Web Developer - The GUM Brand</span>
-			<span>Marketing and Design - Delware North Companies - Chicago Bears</span>
-			<span>Designer -  Ocean Vodka</span>
-			<span>Designer -  Battleshots</span>
-			<span>Designer - Fakeshore Drive</span>
-		</section>
+	<div>
+		<div class="about-wrap">
+			<div>
+				<img class="about-me-img" src="images/james_me.jpg">
+			</div>
+			<div>
+				<div class="h2-intro">I'm a UX Lead, Product Designer, Design Pattern Library creator, Front-End Developer, Seinfeld expert, pizza eater, and traveler.</div>
+				<div class="p">I'm currently working on designing and developing 2 new features for an ecommerce product at GenAlpha. Most days are spent designing, meeting with our product owner and COO, discussing how we can build a solution that is intuitive and easy to use.</div>
+			</div>
+		</div>
 	</div>
 </body>
 
