--- a/about.html
+++ b/about.html
@@ -19,7 +19,6 @@
 				<div><a href="index.html">Home</a></div>
 				<div><a href="about.html">About</a></div>
 				<div><a href="images/james-williams.pdf">Resume</a></div>
-				<div><a href="spotify:user:dopedesigner">Spotify</a></div>
 			</div>
 		</div>
 		<div class="intro">
@@ -35,7 +34,9 @@
 			</div>
 			<div>
 				<div class="h2-intro">I'm a UX Lead, Product Designer, Design Pattern Library creator, Front-End Developer, Seinfeld expert, pizza eater, and traveler.</div>
+				<div class="p">Growing up I've always been consumed with shapes, color. In school I was consumed by my two personas; The Artist and The Athlete. I had more than the appropriate amount of drawing, art history, graphic design, photography in school. All while playing collegiate baseball. I believe the two have things in common that have helped me grow into my career, attention to detail, passion, competition and collaboration. </div>
 				<div class="p">I'm currently working on designing and developing 2 new features for an ecommerce product at GenAlpha. Most days are spent designing, meeting with our product owner and COO, discussing how we can build a solution that is intuitive and easy to use.</div>
+				<div class="p">Some of the things I enjoy that aren't work related? Travel, pizza, and the tri-fecta of TV shows for my generation. "The Office", "Friends", and "Parks and Rec". I love music and play the guitar badly. Staying active has always been a priority of mine, whether that's working out at Shred 4/15 or hiking.  At some point in my career I'd like to not only attend talks and conferences but speak about subjects that I'm passionate about.</div>
 			</div>
 		</div>
 	</div>
