--- a/index.html
+++ b/index.html
@@ -2,11 +2,10 @@
 <html lang="en" >
 
 <head>
-  	<meta charset="UTF-8">
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
   	<title>James the Designer</title>
 	  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
-	  <link href="https://fonts.googleapis.com/css?family=Maven+Pro:900" rel="stylesheet">
-	  <link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet">
 	  <link href="https://fonts.googleapis.com/css?family=Raleway:300,400,900" rel="stylesheet">
 	<link rel="stylesheet" href="style.css">
 </head>
