update about page and add footer

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 			</div>
 		</div>
 	</div>
-	<div class="wrapper">		
+	<!--<div class="wrapper">		
 		<section class="previous-employers">
 			<span>Lead UX - Genalpha Technologies</span>
 			<span>Senior UX Engineer - Acculynx</span>
@@ -113,19 +113,10 @@
 			<span>Designer -  Battleshots</span>
 			<span>Designer - Fakeshore Drive</span>
 		</section>
+	</div>-->
+	<div class="footer">
+		©2019 James Williams Design. Look Ma, no CMS.  
 	</div>
 </body>
-
-
-	<!--<div class="header">
-			<div>This site was designed and developed by James Williams. Find him here:</div>
-			<div class="link-list">
-				<a target="_blank" href="https://www.linkedin.com/in/james-williams-25639a36/">LinkedIn</a>
-				<a target="_blank" href="https://twitter.com/JaamesW">Twitter</a>
-				<a target="_blank" href="https://www.instagram.com/jaaamesw/">Instagram</a>
-				<a target="_blank" href="https://github.com/JaamesW">Github</a>
-				<a href="spotify:user:dopedesigner">Spotify</a>
-			</div>
-	</div>-->
 </html>
 
