--- a/about.html
+++ b/about.html
@@ -2,12 +2,11 @@
 <html lang="en" >
 
 <head>
-  	<meta charset="UTF-8">
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
   	<title>James the Designer</title>
-	  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
-	  <link href="https://fonts.googleapis.com/css?family=Maven+Pro:900" rel="stylesheet">
-	  <link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet">
-	  <link href="https://fonts.googleapis.com/css?family=Raleway:300,400,900" rel="stylesheet">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
+	<link href="https://fonts.googleapis.com/css?family=Raleway:300,400,900" rel="stylesheet">
 	<link rel="stylesheet" href="style.css">
 </head>
 
@@ -35,23 +34,14 @@
 			<div>
 				<div class="h2-intro">I'm a UX Lead, Product Designer, Design Pattern Library creator, Front-End Developer, Seinfeld expert, pizza eater, and traveler.</div>
 				<div class="p">Growing up I've always been consumed with shapes, color. In school I was consumed by my two personas; The Artist and The Athlete. I had more than the appropriate amount of drawing, art history, graphic design, photography in school. All while playing collegiate baseball. I believe the two have things in common that have helped me grow into my career, attention to detail, passion, competition and collaboration. </div>
-				<div class="p">I'm currently working on designing and developing 2 new features for an ecommerce product at GenAlpha. Most days are spent designing, meeting with our product owner and COO, discussing how we can build a solution that is intuitive and easy to use.</div>
+				<div class="p">Currently, I'm working on designing and developing 2 new features for an ecommerce product at GenAlpha. An Auto-Reorder feature and a ecommerce flow to purchase courses and classes. Most days are spent designing, meeting with our product owner and COO, discussing how we can build a solution that is intuitive and easy to use.</div>
 				<div class="p">Some of the things I enjoy that aren't work related? Travel, pizza, and the tri-fecta of TV shows for my generation. "The Office", "Friends", and "Parks and Rec". I love music and play the guitar badly. Staying active has always been a priority of mine, whether that's working out at Shred 4/15 or hiking.  At some point in my career I'd like to not only attend talks and conferences but speak about subjects that I'm passionate about.</div>
 			</div>
 		</div>
 	</div>
+	<div class="footer">
+		©2019 James Williams Design. Look Ma, no CMS.  
+	</div>
 </body>
-
-
-	<!--<div class="header">
-			<div>This site was designed and developed by James Williams. Find him here:</div>
-			<div class="link-list">
-				<a target="_blank" href="https://www.linkedin.com/in/james-williams-25639a36/">LinkedIn</a>
-				<a target="_blank" href="https://twitter.com/JaamesW">Twitter</a>
-				<a target="_blank" href="https://www.instagram.com/jaaamesw/">Instagram</a>
-				<a target="_blank" href="https://github.com/JaamesW">Github</a>
-				<a href="spotify:user:dopedesigner">Spotify</a>
-			</div>
-	</div>-->
 </html>
 
