upload favicon, work history layout, spacing fix

--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+	<link rel="manifest" href="site.webmanifest">
+	<link rel="mask-icon" href="safari-pinned-tab.svg" color="#181818">
+	<meta name="msapplication-TileColor" content="#181818">
+	<meta name="theme-color" content="#ffffff">
   	<title>James the Designer</title>
 	  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
 	  <link href="https://fonts.googleapis.com/css?family=Raleway:300,400,900" rel="stylesheet">
@@ -24,7 +31,7 @@
 			<div class="box">
 				<span class="glitch">James Williams</span>
 			</div>
-			<div class="tagline">Lead UX. Designer. Developer. Curious. <span class="oddball">Oddball.</span> <br>Humanizing Technology everyday. </div>
+			<div class="tagline">UX Lead. Designer. Developer. Curious. <span class="oddball">Oddball.</span> <br>Humanizing technology everyday. </div>
 			<div class="social-wrap">
 				<a target="_blank" href="https://codepen.io/jaamesw/">
 					<svg class="codepen" width="30px" height="30px" viewBox="0 0 500 500" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
@@ -98,6 +105,66 @@
     </g>
 					</svg>
 				</a>
+			</div>
+		</div>
+		<div class="intro-secondary">
+			<div>
+				<div class="work-history-item">
+					<div>
+						<h4>GenAlpha<span>UX LEAD</span></h4>
+						<p class="responsibilities">Define the design, behavior, and usability requirements for our ecommerce product. I lead design demonstrations, participate in discovery meetings with new clients. Work with the product owner and CTO to ensure development process aligns with overall UX goals.</p>
+					</div>
+				</div>
+				<div class="work-history-item">
+					<h4>AccuLynx<span>Sr UX Engineer</span></h4>
+					<p class="responsibilities">Create the company pattern library for use in our platform.  Participate in company wide iteration demonstrations, sprint planning and retrospectives. Collabrote with project own and other designers for backlog refinement. Lead UX Engineer on the new Reporting feature.</p>
+				</div>
+				<div class="work-history-item">
+					<h4>Zywave<span>Sr UX Engineer*</span></h4>
+					<div>	
+						<svg class="trophy" width="16px" height="13px" viewBox="0 0 32 29" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+    <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+        <g id="Artboard" transform="translate(0.000000, -2.000000)" fill="#FDCD17" fill-rule="nonzero">
+            <g id="trophy" transform="translate(0.000000, 2.000000)">
+                <path d="M30.6666667,3.54216867 L24.8888889,3.54216867 L24.8888889,1.32831325 C24.8888889,0.592206325 24.2944444,0 23.5555556,0 L8.44444444,0 C7.70555556,0 7.11111111,0.592206325 7.11111111,1.32831325 L7.11111111,3.54216867 L1.33333333,3.54216867 C0.594444444,3.54216867 0,4.134375 0,4.87048193 L0,7.96987952 C0,9.94574548 1.25,11.9769578 3.43888889,13.5432605 C5.18888889,14.7996235 7.31666667,15.5966114 9.55,15.8512048 C11.2944444,18.7347515 13.3333333,19.9246988 13.3333333,19.9246988 L13.3333333,23.9096386 L10.6666667,23.9096386 C8.70555556,23.9096386 7.11111111,25.0553087 7.11111111,27.0090361 L7.11111111,27.6731928 C7.11111111,28.0384789 7.41111111,28.3373494 7.77777778,28.3373494 L24.2222222,28.3373494 C24.5888889,28.3373494 24.8888889,28.0384789 24.8888889,27.6731928 L24.8888889,27.0090361 C24.8888889,25.0553087 23.2944444,23.9096386 21.3333333,23.9096386 L18.6666667,23.9096386 L18.6666667,19.9246988 C18.6666667,19.9246988 20.7055556,18.7347515 22.45,15.8512048 C24.6888889,15.5966114 26.8166667,14.7996235 28.5611111,13.5432605 C30.7444444,11.9769578 32,9.94574548 32,7.96987952 L32,4.87048193 C32,4.134375 31.4055556,3.54216867 30.6666667,3.54216867 Z M5.51666667,10.6707831 C4.16111111,9.69668675 3.55555556,8.61189759 3.55555556,7.96987952 L3.55555556,7.08433735 L7.12222222,7.08433735 C7.17777778,8.88862952 7.44444444,10.4715361 7.83333333,11.8551958 C6.99444444,11.5673946 6.21111111,11.1689006 5.51666667,10.6707831 L5.51666667,10.6707831 Z M28.4444444,7.96987952 C28.4444444,8.86095633 27.4611111,9.96788404 26.4833333,10.6707831 C25.7888889,11.1689006 25,11.5673946 24.1611111,11.8551958 C24.55,10.4715361 24.8166667,8.88862952 24.8722222,7.08433735 L28.4444444,7.08433735 L28.4444444,7.96987952 Z" id="Shape"></path>
+            </g>
+        </g>
+    </g>
+						</svg>
+						<span class="responsibilities">Company wide "Step Up" Award</span>
+					</div>
+					<p class="responsibilities">Create, maintain and document the Zywave pattern library. One of the leaders on the product design team consisting of UX researchers, designers, and engineers. Worked across several products and teams, collaborating with business analysts,product owners and developers.</p>
+					<p class="responsibilities"><strong>*Previous positions: </strong>Front End Engineer II, Front End Engineer</p>
+					<p class="responsibilities">During my time at Zywave I saw the team and the culture change and our team double in size.  From my first title as Web Designer to seeing design create it's own seat at the table, and display the benefits to the company.</p>
+				</div>
+				<div class="work-history-item">
+					<h4>Moraine Valley CC<span>Web Designer</span></h4>
+					<div>	
+						<svg class="trophy" width="16px" height="13px" viewBox="0 0 32 29" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+		<g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+			<g id="Artboard" transform="translate(0.000000, -2.000000)" fill="#FDCD17" fill-rule="nonzero">
+				<g id="trophy" transform="translate(0.000000, 2.000000)">
+					<path d="M30.6666667,3.54216867 L24.8888889,3.54216867 L24.8888889,1.32831325 C24.8888889,0.592206325 24.2944444,0 23.5555556,0 L8.44444444,0 C7.70555556,0 7.11111111,0.592206325 7.11111111,1.32831325 L7.11111111,3.54216867 L1.33333333,3.54216867 C0.594444444,3.54216867 0,4.134375 0,4.87048193 L0,7.96987952 C0,9.94574548 1.25,11.9769578 3.43888889,13.5432605 C5.18888889,14.7996235 7.31666667,15.5966114 9.55,15.8512048 C11.2944444,18.7347515 13.3333333,19.9246988 13.3333333,19.9246988 L13.3333333,23.9096386 L10.6666667,23.9096386 C8.70555556,23.9096386 7.11111111,25.0553087 7.11111111,27.0090361 L7.11111111,27.6731928 C7.11111111,28.0384789 7.41111111,28.3373494 7.77777778,28.3373494 L24.2222222,28.3373494 C24.5888889,28.3373494 24.8888889,28.0384789 24.8888889,27.6731928 L24.8888889,27.0090361 C24.8888889,25.0553087 23.2944444,23.9096386 21.3333333,23.9096386 L18.6666667,23.9096386 L18.6666667,19.9246988 C18.6666667,19.9246988 20.7055556,18.7347515 22.45,15.8512048 C24.6888889,15.5966114 26.8166667,14.7996235 28.5611111,13.5432605 C30.7444444,11.9769578 32,9.94574548 32,7.96987952 L32,4.87048193 C32,4.134375 31.4055556,3.54216867 30.6666667,3.54216867 Z M5.51666667,10.6707831 C4.16111111,9.69668675 3.55555556,8.61189759 3.55555556,7.96987952 L3.55555556,7.08433735 L7.12222222,7.08433735 C7.17777778,8.88862952 7.44444444,10.4715361 7.83333333,11.8551958 C6.99444444,11.5673946 6.21111111,11.1689006 5.51666667,10.6707831 L5.51666667,10.6707831 Z M28.4444444,7.96987952 C28.4444444,8.86095633 27.4611111,9.96788404 26.4833333,10.6707831 C25.7888889,11.1689006 25,11.5673946 24.1611111,11.8551958 C24.55,10.4715361 24.8166667,8.88862952 24.8722222,7.08433735 L28.4444444,7.08433735 L28.4444444,7.96987952 Z" id="Shape"></path>
+				</g>
+			</g>
+		</g>
+						</svg>
+						<span class="responsibilities">Innovative Digital Design - New Health Center Invitation</span>
+					</div>
+					<p class="responsibilities">Design and create guidelines for college website. Present designs to stakeholders and department heads.</p>
+				</div>
+				<div class="work-history-item">
+					<h4>GUM Brand<span>UX Web Developer</span></h4>
+					<p class="responsibilities">Create wireframes, web flows for initial ideation phase of new GUM Brand ecommerce product. Manage templates for product layout base in the Magento CMS.</p>
+				</div>
+				<div class="work-history-item">
+					<h4>DNC - Chicago Bears<span>Marketing Design</span></h4>
+					<p class="responsibilities">Maintain ecommerce site based on American Eagle CMS. Design banners, html emails and brick and mortor signage. Use Google analytics to develop marketing strategies based on data.</p>
+				</div>
+				<div class="work-history-item">
+					<h4>FakeShoreDrive<span>Design</span></h4>
+					<p class="responsibilities">Design banners and elements for social media posts and blog posts.</p>
+				</div>
 			</div>
 		</div>
 	</div>
