--- a/index.html
+++ b/index.html
@@ -112,15 +112,15 @@
 				<div class="work-history-item">
 					<div>
 						<h4>GenAlpha<span>UX LEAD</span></h4>
-						<p class="responsibilities">Define the design, behavior, and usability requirements for our ecommerce product. I lead design demonstrations, participate in discovery meetings with new clients. Work with the product owner and CTO to ensure development process aligns with overall UX goals.</p>
+						<p class="responsibilities">Define the design, behavior, and usability requirements for our ecommerce product. I lead design demonstrations, participate in discovery meetings with new clients. Work with the product owner and CTO to ensure development process aligns with overall UX goals and philosophies.</p>
 					</div>
 				</div>
 				<div class="work-history-item">
 					<h4>AccuLynx<span>Sr UX Engineer</span></h4>
-					<p class="responsibilities">Create the company pattern library for use in our platform.  Participate in company wide iteration demonstrations, sprint planning and retrospectives. Collabrote with project own and other designers for backlog refinement. Lead UX Engineer on the new Reporting feature.</p>
+					<p class="responsibilities">Create the company pattern library for product along with our product design team.  Participate in company wide iteration demonstrations, sprint planning and retrospectives. Collabrote with project owners and other designers for backlog refinement. Lead UX Engineer on the new Reporting feature.</p>
 				</div>
 				<div class="work-history-item">
-					<h4>Zywave<span>Sr UX Engineer*</span></h4>
+					<h4>Zywave<span>Sr UX Engineer/Design*</span></h4>
 					<div>	
 						<svg class="trophy" width="16px" height="13px" viewBox="0 0 32 29" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
     <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
@@ -134,7 +134,7 @@
 						<span class="responsibilities">Company wide "Step Up" Award</span>
 					</div>
 					<p class="responsibilities">Create, maintain and document the Zywave pattern library. One of the leaders on the product design team consisting of UX researchers, designers, and engineers. Worked across several products and teams, collaborating with business analysts,product owners and developers.</p>
-					<p class="responsibilities"><strong>*Previous positions: </strong>Front End Engineer II, Front End Engineer</p>
+					<p class="responsibilities"><span style="font-weight: 900">Previous Positions: </span>Front End Engineer II, Front End Engineer, Web Designer</p>
 					<p class="responsibilities">During my time at Zywave I saw the team and the culture change and our team double in size.  From my first title as Web Designer to seeing design create it's own seat at the table, and display the benefits to the company.</p>
 				</div>
 				<div class="work-history-item">
