--- a/about.html
+++ b/about.html
@@ -45,13 +45,13 @@
 			</div>
 		</div>
 	</div>
-	<div>
+	<div class="about-container">
 		<div class="about-wrap">
 			<div>
 				<img class="about-me-img" src="images/james_me.jpg">
 			</div>
 			<div>
-				<div class="h2-intro">I'm a UX Lead, Product Designer, Design Pattern Library creator, Front-End Developer, Seinfeld expert, pizza eater, and traveler.</div>
+				<div class="h2-intro">User Exerience Lead, Product Designer, Design Pattern Library creator, Front-End Developer, Seinfeld expert, pizza eater, and traveler.</div>
 				<div class="p">I love to design, develop, and ask questions. Right now I am the Experience Design Lead for GenAlpha, and specialize in product design, sketching and prototyping, and teaching and emphasizing a user-centered approach to problem solving.</div>
 				<div class="p">I'm working on designing and developing 2 new features for an ecommerce product at GenAlpha. An Auto-Reorder feature and a ecommerce flow to purchase courses and classes. Most days are spent doing user research, meeting with our product owner and COO, discussing how we can build a solution that is intuitive and easy to use.</div>
 				<div class="p">Some of the things I enjoy that aren't work related? Travel, pizza, and the tri-fecta of TV shows for my generation. "The Office", "Friends", and "Parks and Rec". I love music and play the guitar badly, but it's fun right? Staying active has always been a priority of mine, whether that's working out at Shred 4/15 or hiking outdoors and breaking the screen-time cycle. </div>
