update active link style

--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
 			<div>JW</div>
 			<div class="nav">
 				<div><a href="index.html">Home</a></div>
-				<div><a href="about.html">About</a></div>
+				<div class="active">About</div>
 				<div><a href="images/jameswilliams_resX.pdf">Resume</a></div>
 			</div>
 		</div>
