--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 		<div class="header">
 			<div>JW</div>
 			<div class="nav">
-				<div><a href="index.html">Home</a></div>
+				<div class="active">Home</div>
 				<div><a href="about.html">About</a></div>
 				<div><a href="images/jameswilliams_resX.pdf">Resume</a></div>
 			</div>
