update genalpha case study

--- a/genalpha.html
+++ b/genalpha.html
@@ -29,104 +29,97 @@
 	<link rel="stylesheet" href="style.css">
 </head>
 
-<body>
+<body class="genalpha">
 	<div class="home-header">
 		<div class="header">
 			<div>JW</div>
 			<div class="nav">
-				<div class="active">Home</div>
+				<div><a href="index.html">Home</a></div>
 				<div><a href="about.html">About</a></div>
 				<div><a href="images/jameswilliams_resX.pdf">Resume</a></div>
 			</div>
 		</div>
 		<div class="intro">
 			<div class="box">
-				<span class="glitch">James Williams</span>
+				<span class="glitch">GenAlpha —</span>
 			</div>
-			<div class="tagline">Experience Design Lead. Thinker. Curious. Humanizing technology. </div>
+			<div class="tagline">Subscription based auto-reordering functionality</div>
 		</div>
 		<div class="intro-secondary">
 			<div>
 				<div class="work-history-item feature">
-					<div>
-						<h4>GenAlpha —<span> Lead the design and user-first approach to creating an ecommerce product for aftermarket manufacturing parts.</span></h4>
-					</div>
-					<a href="genalpha.html">
-						<div class="case-study feature span-col-2">
-							<img class="case-study-feature" src="images/auto-reorder.jpg" alt="auto-reorder landing">
-						</div>
-					</a>
 					<div class="grid">
+						<div class="span-col-2">
+							<h4>Subscription based ordering</h4>
+							<p>GenAlpha(PartSpot) is a fully integrated B2B ecommerce solution for aftermarket manufacturing products.  Selling everything from massive high power machines to the smallest of screws.  Some of these products are in constant and frequent need. So much so, we decided to allow the user to "subscribe" to an order and have it repeatedly be delivered without any action from the user. This functionality exists in alot of places (amazon, pet supplies, coffee, etc.) so there's somewhat of a familiarity that we're able to start with. </p>
+						</div>
+						<div></div>
+					</div>
+					<div class="placeholder-image span-col-2">
+						<div style="font-size: 24px; text-align:center;color:rgba(255,255,255,.5);font-family:'hind';text-transform:uppercase;">Case Study Images Coming Soon</div>
+					</div>
+				</div>
+				<div class="work-history-item feature">
+					<h4>Initial Research and Foundation</h4>
+					<div class="grid">
+						<div class="span-col-2">
+							<p>Genalpha's new features currently begin with a customer's business need. While the origin comes from the business, Genalpha conducts some initial research into the project to properly frame the functionality and need. This part of the process is a little more conventional.</p>
+							<p>Questions were asked internally as well as to the business who requested the functionality.  There was a need to discover where in the ordering process was a user the most motivated to create a subscription order, and how could we make it seemless as possible.   Genalpha uncovered needs that were not typical of how a basic subscription order occurs in most ecommerce platforms today. For instance there was an emphatic need, because of the nature of the business, to start an "auto-reorder" from scratch.</p>
+							<p>Apart of GenAlphas research was gaining a knowledge of previous purchases of users. What type of parts are they buying? How often are they buying those parts? This lead to a confirmation of the idea of subscriptions, and also aided us in the frequency options.</p>
+						</div>
 						<div>
-							<p class="feature-info">As the User Experience Lead at Genalpha, I define the UI and UX effort for creating a flawless experience within our ecommerce product.  Through user research, sketching, prototyping, and front-end development strategy we created a new identity for what it means to be a GenAlpha partner.</p>
+							<img style="max-width:300px;border-radius:4px;margin-left:20px;" src="images/fogg.jpg" alt="bj fogg behavior model">
+							<figcaption style="margin-left:20px;">BJ Fogg Behavior Model</figcaption>
+						</div>
+					</div>
+					<div class="placeholder-image span-col-2">
+						<div style="font-size: 24px; text-align:center;color:rgba(255,255,255,.5);font-family:'hind';text-transform:uppercase;">Case Study Images Coming Soon</div>
+					</div>
+					<div class="placeholder-image span-col-2">
+						<div style="font-size: 24px; text-align:center;color:rgba(255,255,255,.5);font-family:'hind';text-transform:uppercase;">Case Study Images Coming Soon</div>
+					</div>
+				</div>
+				<div class="work-history-item feature">
+					<div class="grid">
+						<div class="span-col-2">
+							<h4>User Path #1 — After a regular order is placed</h4>
+							<p>Referencing the BJ Fogg behavior method, GenAlpha asked "When would a user be the most willing create a subscription order?".  We found that after an initial order was placed we could make a few assumptions:</p>
+							<ul>
+								<li>The user is in a positive mindset of knowing that the order they just placed has been successfully submitted.</li>
+								<li>They most likely have the appropriate information handy to complete an order, address, billing info, etc.</li>
+								<li>There's a possible pain point here, if the user "wished" they could create this order automatically.</li>
+							</ul>
 						</div>
 						<div></div>
+					</div>
+					<div class="placeholder-image span-col-2">
+						<div style="font-size: 24px; text-align:center;color:rgba(255,255,255,.5);font-family:'hind';text-transform:uppercase;">Case Study Images Coming Soon</div>
+					</div>
+				</div>
+				<div class="work-history-item feature">
+					<div class="grid">
+						<div class="span-col-2">
+							<h4>User Path #2 — Creating an Auto-Reorder from scratch</h4>
+							<p>One reocurring request from the the business and their customers, was the ability to create an auto-reorder from a blank slate. Most times, these users are purchasers for their business and are given a list of parts with a part number and are told to create an order. These users do not browse the product. The need here is "give me the quickest way I can go into your product and create an auto-reorder".  </p>
+							<p>Adding an additional bulk upload feature that exists in the product for a different piece of functionality, GenAlpha created an entry point where a user could start a new order, or upload an Excel spreadsheet in the correct format.</p>
+						</div>
 						<div></div>
 					</div>
-				</div>
-				<!--
-				<div class="work-history-item grid">
-					<div>
-						<h4>GenAlpha<span>UX LEAD</span></h4>
-						<p class="responsibilities">Define the design, behavior, and usability requirements for our ecommerce product. I lead design demonstrations, participate in discovery meetings with new clients. Work with the product owner and CTO to ensure development process aligns with overall UX goals and philosophies.</p>
+					<div class="placeholder-image span-col-2">
+						<div style="font-size: 24px; text-align:center;color:rgba(255,255,255,.5);font-family:'hind';text-transform:uppercase;">Case Study Images Coming Soon</div>
 					</div>
 				</div>
-			-->
-				<div class="work-history-item grid">
-					<div>
-						<h4>AccuLynx<span>Sr UX Engineer</span></h4>
-						<p class="responsibilities">Create the company pattern library for product along with our product design team.  Participate in company wide iteration demonstrations, sprint planning and retrospectives. Collabrote with project owners and other designers for backlog refinement. Lead UX Engineer on the new Reporting feature.</p>
-					</div>
-				</div>
-				<div class="work-history-item grid">
-					<div>
-						<h4>Zywave<span>Sr UX Engineer/Design*</span></h4>
-						<div>	
-							<svg class="trophy" width="16px" height="13px" viewBox="0 0 32 29" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-    <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
-        <g id="Artboard" transform="translate(0.000000, -2.000000)" fill="#FDCD17" fill-rule="nonzero">
-            <g id="trophy" transform="translate(0.000000, 2.000000)">
-                <path d="M30.6666667,3.54216867 L24.8888889,3.54216867 L24.8888889,1.32831325 C24.8888889,0.592206325 24.2944444,0 23.5555556,0 L8.44444444,0 C7.70555556,0 7.11111111,0.592206325 7.11111111,1.32831325 L7.11111111,3.54216867 L1.33333333,3.54216867 C0.594444444,3.54216867 0,4.134375 0,4.87048193 L0,7.96987952 C0,9.94574548 1.25,11.9769578 3.43888889,13.5432605 C5.18888889,14.7996235 7.31666667,15.5966114 9.55,15.8512048 C11.2944444,18.7347515 13.3333333,19.9246988 13.3333333,19.9246988 L13.3333333,23.9096386 L10.6666667,23.9096386 C8.70555556,23.9096386 7.11111111,25.0553087 7.11111111,27.0090361 L7.11111111,27.6731928 C7.11111111,28.0384789 7.41111111,28.3373494 7.77777778,28.3373494 L24.2222222,28.3373494 C24.5888889,28.3373494 24.8888889,28.0384789 24.8888889,27.6731928 L24.8888889,27.0090361 C24.8888889,25.0553087 23.2944444,23.9096386 21.3333333,23.9096386 L18.6666667,23.9096386 L18.6666667,19.9246988 C18.6666667,19.9246988 20.7055556,18.7347515 22.45,15.8512048 C24.6888889,15.5966114 26.8166667,14.7996235 28.5611111,13.5432605 C30.7444444,11.9769578 32,9.94574548 32,7.96987952 L32,4.87048193 C32,4.134375 31.4055556,3.54216867 30.6666667,3.54216867 Z M5.51666667,10.6707831 C4.16111111,9.69668675 3.55555556,8.61189759 3.55555556,7.96987952 L3.55555556,7.08433735 L7.12222222,7.08433735 C7.17777778,8.88862952 7.44444444,10.4715361 7.83333333,11.8551958 C6.99444444,11.5673946 6.21111111,11.1689006 5.51666667,10.6707831 L5.51666667,10.6707831 Z M28.4444444,7.96987952 C28.4444444,8.86095633 27.4611111,9.96788404 26.4833333,10.6707831 C25.7888889,11.1689006 25,11.5673946 24.1611111,11.8551958 C24.55,10.4715361 24.8166667,8.88862952 24.8722222,7.08433735 L28.4444444,7.08433735 L28.4444444,7.96987952 Z" id="Shape"></path>
-            </g>
-        </g>
-    </g>
-							</svg>
-							<span class="responsibilities">Company wide "Step Up" Award</span>
+				<div class="work-history-item feature">
+					<div class="grid">
+						<div class="span-col-2">
+							<h4>Conclusion</h4>
+							<p>This project has yet to be pushed to production, as it should be fully developed later this year. One of the challenges GenAlpha faces with every business is the integration aspect. Implementing this functionality was based on a single business's need. GenAlpha is aiming to build on this project, and make it something that can be used with any setup, any ERP. </p>
+							<p>Adding an additional bulk upload feature that exists in the product for a different piece of functionality, GenAlpha created an entry point where a user could start a new order, or upload an Excel spreadsheet in the correct format.</p>
 						</div>
-						<p class="responsibilities">Create, maintain and document the Zywave pattern library. One of the leaders on the product design team consisting of UX researchers, designers, and engineers. Worked across several products and teams, collaborating with business analysts,product owners and developers.</p>
-						<p class="responsibilities"><span style="font-weight: 900">Previous Positions: </span>Front End Engineer II, Front End Engineer, Web Designer</p>
+						<div></div>
 					</div>
-				</div>
-				<div class="work-history-item grid">
-					<div>
-						<h4>Moraine Valley CC<span>Web Designer</span></h4>
-						<div>	
-							<svg class="trophy" width="16px" height="13px" viewBox="0 0 32 29" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-		<g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
-			<g id="Artboard" transform="translate(0.000000, -2.000000)" fill="#FDCD17" fill-rule="nonzero">
-				<g id="trophy" transform="translate(0.000000, 2.000000)">
-					<path d="M30.6666667,3.54216867 L24.8888889,3.54216867 L24.8888889,1.32831325 C24.8888889,0.592206325 24.2944444,0 23.5555556,0 L8.44444444,0 C7.70555556,0 7.11111111,0.592206325 7.11111111,1.32831325 L7.11111111,3.54216867 L1.33333333,3.54216867 C0.594444444,3.54216867 0,4.134375 0,4.87048193 L0,7.96987952 C0,9.94574548 1.25,11.9769578 3.43888889,13.5432605 C5.18888889,14.7996235 7.31666667,15.5966114 9.55,15.8512048 C11.2944444,18.7347515 13.3333333,19.9246988 13.3333333,19.9246988 L13.3333333,23.9096386 L10.6666667,23.9096386 C8.70555556,23.9096386 7.11111111,25.0553087 7.11111111,27.0090361 L7.11111111,27.6731928 C7.11111111,28.0384789 7.41111111,28.3373494 7.77777778,28.3373494 L24.2222222,28.3373494 C24.5888889,28.3373494 24.8888889,28.0384789 24.8888889,27.6731928 L24.8888889,27.0090361 C24.8888889,25.0553087 23.2944444,23.9096386 21.3333333,23.9096386 L18.6666667,23.9096386 L18.6666667,19.9246988 C18.6666667,19.9246988 20.7055556,18.7347515 22.45,15.8512048 C24.6888889,15.5966114 26.8166667,14.7996235 28.5611111,13.5432605 C30.7444444,11.9769578 32,9.94574548 32,7.96987952 L32,4.87048193 C32,4.134375 31.4055556,3.54216867 30.6666667,3.54216867 Z M5.51666667,10.6707831 C4.16111111,9.69668675 3.55555556,8.61189759 3.55555556,7.96987952 L3.55555556,7.08433735 L7.12222222,7.08433735 C7.17777778,8.88862952 7.44444444,10.4715361 7.83333333,11.8551958 C6.99444444,11.5673946 6.21111111,11.1689006 5.51666667,10.6707831 L5.51666667,10.6707831 Z M28.4444444,7.96987952 C28.4444444,8.86095633 27.4611111,9.96788404 26.4833333,10.6707831 C25.7888889,11.1689006 25,11.5673946 24.1611111,11.8551958 C24.55,10.4715361 24.8166667,8.88862952 24.8722222,7.08433735 L28.4444444,7.08433735 L28.4444444,7.96987952 Z" id="Shape"></path>
-				</g>
-			</g>
-		</g>
-							</svg>
-							<span class="responsibilities">Innovative Digital Design - New Health Center Invitation</span>
-							<p class="responsibilities">Design and create guidelines for college website. Present designs to stakeholders and department heads.</p>
-						</div>
-					</div>
-				</div>
-				<div class="work-history-item grid">
-					<div>
-						<h4>GUM Brand<span>UX Web Developer</span></h4>
-						<p class="responsibilities">Create wireframes, web flows for initial ideation phase of new GUM Brand ecommerce product. Manage templates for product layout base in the Magento CMS.</p>
-					</div>
-					<div>
-						<h4>DNC - Chicago Bears<span>Design</span></h4>
-						<p class="responsibilities">Maintain ecommerce site based on American Eagle CMS. Design banners, html emails and brick and mortor signage. Use Google analytics to develop marketing strategies based on data.</p>
-					</div>
-					<div>
-						<h4>FakeShoreDrive<span>Design</span></h4>
-						<p class="responsibilities">Design banners and elements for social media posts and blog posts.</p>
+					<div class="placeholder-image span-col-2">
+						<div style="font-size: 24px; text-align:center;color:rgba(255,255,255,.5);font-family:'hind';text-transform:uppercase;">Case Study Images Coming Soon</div>
 					</div>
 				</div>
 			</div>
