--- a/genalpha.html
+++ b/genalpha.html
@@ -55,8 +55,8 @@
 						</div>
 						<div></div>
 					</div>
-					<div class="placeholder-image span-col-2">
-						<div style="font-size: 24px; text-align:center;color:rgba(255,255,255,.5);font-family:'hind';text-transform:uppercase;">Case Study Images Coming Soon</div>
+					<div class="span-col-2">
+						<img class="case-study-image" src="images/auto-reorder/auto-reorder-list-view.jpg">
 					</div>
 				</div>
 				<div class="work-history-item feature">
@@ -72,11 +72,8 @@
 							<figcaption style="margin-left:20px;">BJ Fogg Behavior Model</figcaption>
 						</div>
 					</div>
-					<div class="placeholder-image span-col-2">
-						<div style="font-size: 24px; text-align:center;color:rgba(255,255,255,.5);font-family:'hind';text-transform:uppercase;">Case Study Images Coming Soon</div>
-					</div>
-					<div class="placeholder-image span-col-2">
-						<div style="font-size: 24px; text-align:center;color:rgba(255,255,255,.5);font-family:'hind';text-transform:uppercase;">Case Study Images Coming Soon</div>
+					<div class="span-col-2">
+						<img class="case-study-image" src="images/auto-reorder/1_auto-reorder-workflow.png">
 					</div>
 				</div>
 				<div class="work-history-item feature">
@@ -92,8 +89,8 @@
 						</div>
 						<div></div>
 					</div>
-					<div class="placeholder-image span-col-2">
-						<div style="font-size: 24px; text-align:center;color:rgba(255,255,255,.5);font-family:'hind';text-transform:uppercase;">Case Study Images Coming Soon</div>
+					<div class="span-col-2">
+						<img class="case-study-image" src="images/auto-reorder/auto-reorder-on-confirmation.png">
 					</div>
 				</div>
 				<div class="work-history-item feature">
@@ -105,8 +102,8 @@
 						</div>
 						<div></div>
 					</div>
-					<div class="placeholder-image span-col-2">
-						<div style="font-size: 24px; text-align:center;color:rgba(255,255,255,.5);font-family:'hind';text-transform:uppercase;">Case Study Images Coming Soon</div>
+					<div class="span-col-2">
+						<img class="case-study-image" src="images/auto-reorder/auto-reorder-reorder-detail-blank.png">
 					</div>
 				</div>
 				<div class="work-history-item feature">
@@ -118,8 +115,9 @@
 						</div>
 						<div></div>
 					</div>
-					<div class="placeholder-image span-col-2">
-						<div style="font-size: 24px; text-align:center;color:rgba(255,255,255,.5);font-family:'hind';text-transform:uppercase;">Case Study Images Coming Soon</div>
+					<div class="span-col-2">
+						<img class="case-study-image" src="images/auto-reorder/auto-reorder-reorder-checkout.png">
+						<img class="case-study-image" src="images/auto-reorder/auto-reorder-reorder-detail-edit.png">
 					</div>
 				</div>
 			</div>
